# Research-Assistant

backend/: alembic.ini  pyproject.toml  requirements.txt  test_db.py  test_gemini.py
backend/app/: api.py  main.py
backend/app/config/: constants.py  settings.py
backend/app/core/: llm_utils.py  rate_limiter.py  rbac.py  security.py  utils.py
backend/app/db/: models.py  session.py
backend/app/features/: benchmark_explorer.py  citation_validator.py  contradiction_analyzer.py  cross_domain_synth.py  experiment_replicator.py  latex_generator.py  literature_survey.py  methodology_builder.py  persona_summarizer.py  research_gap_finder.py  translator.py
backend/app/io/: schemas.py  storage.py
backend/app/llm/: openai_client.py
backend/app/retrieval/: crossref_client.py  http.py  openalex_client.py  semantic_scholar_client.py  unpaywall_client.py
backend/app/voice/: speech_io.py
backend/migrations/: env.py
backend/migrations/versions/: 3eef721c7bb6_create_final_tables.py
backend/research_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
