[project]
name = "research-assistant-backend"
version = "0.1.0"
description = "Smart research assistant backend (FastAPI, SQLAlchemy, OpenAI, no pgvector)"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.36",
  "psycopg[binary]>=3.2.1",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.9.0",
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "jinja2>=3.1.4"
]

[tool.uvicorn]
factory = true
